unpackaged/main/default/objects/Case/fields/Closing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Notes__c</fullName>
    <label>Closing Notes</label>
    <type>TextArea</type>
</CustomField>