unpackaged/main/default/objects/Case/fields/External_Ref__c.field-meta.xml
<CustomField>
    <fullName>External_Ref__c</fullName>
    <inlineHelpText>e.g. Hay, MSA</inlineHelpText>
    <label>External Ref#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>