unpackaged/main/default/objects/Case/fields/Internal_IT__c.field-meta.xml
<CustomField>
    <fullName>Internal_IT__c</fullName>
    <label>Internal IT#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>