unpackaged/main/default/objects/Case/fields/NewCustomerResponse__c.field-meta.xml
<CustomField>
    <fullName>NewCustomerResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate an email has been received on the case - Unflags when there is an edit on the case</description>
    <label>New Customer Response</label>
    <type>Checkbox</type>
</CustomField>