unpackaged/main/default/objects/Case/fields/Priority_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Priority_Change_Reason__c</fullName>
    <inlineHelpText>Provide a reason as to why the case priority was changed</inlineHelpText>
    <label>Priority Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>