unpackaged/main/default/objects/Case/fields/Voicemail_Link__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Link__c</fullName>
    <label>Voicemail Link</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>