unpackaged/main/default/objects/Case/validationRules/Closing_notes_required_on_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_notes_required_on_Close</fullName>
    <active>true</active>
    <description>Ensures closing notes are populated when a case is closed</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, "Closed"),
ISBLANK(Closing_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Closing_Notes__c</errorDisplayField>
    <errorMessage>Closing notes are required when closing the case</errorMessage>
</ValidationRule>