unpackaged/main/default/objects/Case/validationRules/Priority_change_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_change_reason_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Priority),
NOT(ISPICKVAL( Priority, "Default for Type")),
NOT(ISCHANGED( Priority_Change_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Priority_Change_Reason__c</errorDisplayField>
    <errorMessage>A reason is required when changing the priority</errorMessage>
</ValidationRule>