unpackaged/main/default/objects/Case/listViews/General_Support_Case.listView-meta.xml
<ListView>
    <fullName>General_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Support</label>
    <queue>General_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>